--- a/WEB/WEB/Views/Product/Search.cshtml
+++ b/WEB/WEB/Views/Product/Search.cshtml
@@ -1,12 +1,13 @@
-﻿@using WEB.Data
+﻿@model IEnumerable<WEB.ViewModels.ProductViewModel>
+@{
+    ViewData["Title"] = "Search";
+    Layout = "_Layout";
+}
 
-@using X.PagedList
-@using X.PagedList.Mvc.Core
+<h1>Danh Sách Tìm Kiếm Sản Phẩm</h1>
 
-
-
-@model X.PagedList.IPagedList<WEB.Data.Product>
-<section>
+ 
+ <section>
 	<div class="container">
 		<div class="row">
 
@@ -48,12 +49,11 @@
 					}
 				</div><!--features_items-->
 
-				<ul class="pagination">
-					
+@* 				<ul class="pagination">
+
 					@Html.PagedListPager(Model, page => Url.Action("ProductbyCategory", new { page }))
 				</ul>
-			</div>
+ *@			</div>
 		</div>
 	</div>
 </section>
-
