--- a/WEB/WEB/Views/Product/Detail.cshtml
+++ b/WEB/WEB/Views/Product/Detail.cshtml
@@ -16,7 +16,7 @@
 					<!--product-details-->
 					<div class="col-sm-5">
 						<div class="view-product">
-							<img src="~/image/@Model.Image" alt="" />
+							<img src="~/image/@Model.Image" alt="@Model.ProductName  " />
 						</div>
 						@* <div id="similar-product" class="carousel slide" data-ride="carousel">
 
@@ -42,10 +42,14 @@
 								<span>@Model.Price VND</span>
 								<label>Quantity:@Model.CategoryName.ToString()</label>
 								<input type="text" value="3" />
-								<button type="button" class="btn btn-fefault cart">
-									<i class="fa fa-shopping-cart"></i>
-									Add to cart
-								</button>
+
+								<a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.ProductId">
+									<button type="button" class="btn btn-fefault cart">
+										<i asp-controller="Cart" asp-action="AddToCart" asp-route-id="@Model.ProductId" class="fa fa-shopping-cart"></i>
+										Add to cart
+									</button>
+
+								</a>
 							</span>
 							<p>Hãng: @Model.CategoryName</p>
 							<p>Ram: @Model.Ram</p>
