--- a/WEB/WEB/Views/Product/ProductbyCategory.cshtml
+++ b/WEB/WEB/Views/Product/ProductbyCategory.cshtml
@@ -18,26 +18,27 @@
 				<div class="features_items">
 					<!--features_items-->
 					<h2 class="title text-center">Hàng Hóa</h2>
-
 					@foreach (var item in Model)
 					{
 						<div class="col-sm-4">
 							<div class="product-image-wrapper">
-								<div class="single-products">
-									<div class="productinfo text-center">
-										<img src="@Url.Content("~/image/"+item.Image)" alt="" />
-										<h2>@item.Price VND</h2>
-										<p>@item.ProductName</p>
-										<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-									</div>
-									<div class="product-overlay">
-										<div class="overlay-content">
+
+
+								<a asp-controller="Product" asp-action="Detail" asp-route-id="@item.ProductId">
+									<div class="single-products">
+										<div class="productinfo text-center">
+											<img src="@Url.Content("~/image/"+item.Image)" alt="" />
 											<h2>@item.Price VND</h2>
 											<p>@item.ProductName</p>
-											<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+											<p>RAM: @item.Ram</p>
+											<p>Pin: @item.Pin</p>
+											<p>Trọng Lượng: @item.Weight</p>
+											<a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@item.ProductId" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
 										</div>
+
 									</div>
-								</div>
+								</a>
+
 								<div class="choose">
 									<ul class="nav nav-pills nav-justified">
 										<li><a asp-controller="Product" asp-action="Detail" asp-route-id="@item.ProductId"><i class="fa fa-plus-square"></i>View Detail</a></li>
@@ -45,8 +46,43 @@
 								</div>
 							</div>
 						</div>
+
+
 					}
-				</div><!--features_items-->
+
+@* 					 @foreach (var item in Model)
+					 {
+					 	<div class="col-sm-4">
+					 		<div class="product-image-wrapper">
+					 			<div class="single-products">
+					 				<div class="productinfo text-center">
+					 					<img src="@Url.Content("~/image/"+item.Image)" alt="" />
+					 					<h2>@item.Price VND</h2>
+					 					<p>@item.ProductName</p>
+					 					<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+					 				</div>
+					 				<div class="product-overlay">
+					 					<div class="overlay-content">
+					 						<h2>@item.Price VND</h2>
+					 						<p>@item.ProductName</p>
+					 						<a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+					 					</div>
+					 				</div>
+					 			</div>
+					 			<div class="choose">
+					 				<ul class="nav nav-pills nav-justified">
+					 					<li><a asp-controller="Product" asp-action="Detail" asp-route-id="@item.ProductId"><i class="fa fa-plus-square"></i>View Detail</a></li>
+					 				</ul>
+					 			</div>
+					 		</div>
+					 	</div>
+					 }
+ *@				
+                   
+
+
+
+                </div><!--features_items-->
 
 				<ul class="pagination">
 					
