--- a/WEB/WEB/Views/Product/Search.cshtml
+++ b/WEB/WEB/Views/Product/Search.cshtml
@@ -24,6 +24,39 @@
 					{
 						<div class="col-sm-4">
 							<div class="product-image-wrapper">
+
+
+								<a asp-controller="Product" asp-action="Detail" asp-route-id="@item.ProductId">
+									<div class="single-products">
+										<div class="productinfo text-center">
+											<img src="@Url.Content("~/image/"+item.Image)" alt="" />
+											<h2>@item.Price VND</h2>
+											<p>@item.ProductName</p>
+											<p>RAM: @item.Ram</p>
+											<p>Pin: @item.Pin</p>
+											<p>Trọng Lượng: @item.Weight</p>
+											<a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@item.ProductId" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+										</div>
+
+									</div>
+								</a>
+
+								<div class="choose">
+									<ul class="nav nav-pills nav-justified">
+										<li><a asp-controller="Product" asp-action="Detail" asp-route-id="@item.ProductId"><i class="fa fa-plus-square"></i>View Detail</a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+
+
+					}
+
+
+@* 					@foreach (var item in Model)
+					{
+						<div class="col-sm-4">
+							<div class="product-image-wrapper">
 								<div class="single-products">
 									<div class="productinfo text-center">
 										<img src="@Url.Content("~/image/"+item.Image)" alt="" />
@@ -47,7 +80,10 @@
 							</div>
 						</div>
 					}
-				</div><!--features_items-->
+
+
+
+ *@				</div><!--features_items-->
 
 @* 				<ul class="pagination">
 
