--- a/WEB/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/WEB/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
 							<ul class="nav navbar-nav">
 								<li><a href="#"><i class="fa fa-user"></i> Account</a></li>
 								<li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
-								<li><a href="checkout.html"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+								<li><a asp-controller="Cart" asp-action="Checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
 								<li><a asp-controller="Cart" asp-action="Index"><i class="fa fa-shopping-cart"></i> Cart</a></li>
 								<li><a href="login.html"><i class="fa fa-lock"></i> Login</a></li>
 							</ul>
