--- a/WEB/WEB/Views/Shared/_Layout.cshtml
+++ b/WEB/WEB/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
 								<li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
 								<li><a asp-controller="Cart" asp-action="Checkout"><i class="fa fa-crosshairs"></i> Checkout</a></li>
 								<li><a><i class="fa fa-shopping-cart"></i> Cart</a></li>
-								<li><a asp-controller="Account" asp-action="Index"><i class="fa fa-lock"></i> Login</a></li>
+								<li><a asp-controller="Account" asp-action="Login" title="Login"><i class="fa fa-lock"></i> Login</a></li>
 							</ul>
 						</div>
 					</div>
@@ -172,6 +172,6 @@
 	<script src="~/js/jquery.prettyPhoto.js"></script>
 	<script src="~/js/main.js"></script>
 
-	@await RenderSectionAsync("scripts", required: false)
+	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
