--- a/WEB/WEB/Views/Account/Login.cshtml
+++ b/WEB/WEB/Views/Account/Login.cshtml
@@ -1,47 +1,49 @@
-﻿@model WEB.ViewModels.AppUserVM
-
+﻿
 @{
-	ViewData["Title"] = "Register";
+    ViewData["Title"] = "Login";
 }
 
+@model RegisterVM
 
-<section id="form">
+
+<section id="">
 	<!--form-->
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-8 col-sm-offset-1">
+			<div class="col-sm-4 col-sm-offset-1">
 				<div class="login-form">
 					<!--login form-->
-					<h2>Login to your account</h2>
-
-			
-						<form asp-controller="Account" asp-action="Login">
-							<div class="form-group">
-								<label>User Name</label>
-								<input asp-for="UserName" class="form-control" />
-								<span asp-validation-for="UserName" class="text-danger"></span>
-							</div>
-
-							
-
-							<div class="form-group">
-								<label>Password</label>
-								<input asp-for="Password" class="form-control" />
-								<span asp-validation-for="Password" class="text-danger"></span>
-
-							</div>
-
-							<button type="submit" class="btn btn-default">Login</button>
-							<a asp-action="Register" asp-controller="account"> Register</a>
-						</form>
-
+					<h2>Đăng Nhập</h2>
 					
+					<form asp-action="Register" asp-asp-route-returnurl="@ViewBag.ReturnUrl" method="post">
+						<div class="text-danger" asp-validation-summary="All"> </div>
+						<div>
+							<label>Tên đăng nhập:</label>
+							<input asp-for="@Model.UserName" class="form-control" />
+							<span asp-validation-for="UserName" class="text-danger"></span>
+						</div>
+						
+						<div>
+							<label>Mật khẩu:</label>
+							<input asp-for="@Model.Password" type="password" class="form-control" />
+							<span asp-validation-for="Password" class="text-danger"></span>
+						</div>
+						<button type="submit" class="btn btn-primary">Đăng Nhập</button>
+
+
+@* 						<a asp-controller="Account" asp-action="QuenMatKhau" class = "btn border-danger"> Quên mật khẩu </a>
+ *@				
+                    </form>
+
 				</div><!--/login form-->
 			</div>
-	
-
-
-		
 		</div>
 	</div>
 </section><!--/form-->
+@section Scripts {
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
+}
+
+
